--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,11 +1,10 @@
-FROM python:3.8-slim-buster
+FROM tiangolo/uwsgi-nginx-flask:python3.8-alpine
 
 WORKDIR /app
 
 COPY . .
 
-RUN pip3 install requests pyyaml
+RUN pip3 install requests pyyaml Flask-Session
+RUN pip3 install -r requirements.txt
 
 ENV PYTHONWARNINGS="ignore:Unverified HTTPS request"
-
-CMD ["python3", "upload.py"] 
