strips down functionality to only what is necessary

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN pip3 install requests pyyaml Flask-Session xlsxwriter
+RUN pip3 install requests pyyaml Flask-Session xlsxwriter openpyxl
 RUN pip3 install -r requirements.txt
 
 ENV PYTHONWARNINGS="ignore:Unverified HTTPS request"
